# cpp-exercise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
spell-checker/: CMakeLists.txt  main.cpp  words.txt
task-scheduler/: CMakeLists.txt  README.md  main.cpp  second.cpp
word-frequency-counter/: CMakeLists.txt  README.md  file.txt  main.cpp
